@startuml

title __SERVICE's Class Diagram__\n

  namespace br.com.bancoms.service {
    class br.com.bancoms.service.ClienteService {
        {static} - clienteService : ClienteService
        + consultarCliente()
        {static} + getInstance()
        + realizarLogin()
        - ClienteService()
    }
  }
  

  namespace br.com.bancoms.service {
    class br.com.bancoms.service.ContaService {
        {static} - contaService : ContaService
        + consultarConta()
        {static} + getInstance()
        + realizarDeposito()
        + realizarDepositoPropria()
        + realizarSaque()
        + realizarTransferencia()
        - ContaService()
        - atualizarSaldo()
    }
  }
  

  namespace br.com.bancoms.service {
    class br.com.bancoms.service.MovimentoService {
        {static} - movimentoService : MovimentoService
        {static} + getInstance()
        + getSaldoDiferencial()
        + listarMovimentosPorTipo()
        + listarTodosMovimentos()
        + registrarMovimento()
        + registrarMovimentos()
        - MovimentoService()
    }
  }
  

  br.com.bancoms.service.ClienteService o-- br.com.bancoms.dao.ClienteDAO : clienteDAO
  br.com.bancoms.service.ContaService o-- br.com.bancoms.dao.ContaDAO : contaDAO
  br.com.bancoms.service.MovimentoService o-- br.com.bancoms.dao.MovimentoDAO : movimentoDAO


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
